--- a/app/public/index.html
+++ b/app/public/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>Sample Socket.io Chat Application</title>
+  <title>SD-CHAT-ISC</title>
   
   <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="/bower_components/ladda/dist/ladda-themeless.min.css" rel="stylesheet">
@@ -28,13 +28,13 @@
 			    has-error
 			    <% } %>
 			    ">
-		  <label> Name </label>
-		  <input type="text" class="form-control" id="nameText" placeholder="Enter your name">
+		  <label> INICIAR CHAT </label>
+		  <input type="text" class="form-control" id="nameText" placeholder="ESCRIBA EL NOMBRE DE NICK">
 
 		  <label class="control-label"> <%= error %> </label>
 
 		  <br>
-		  <a id="nameBtn" type="button" class="btn btn-primary btn-lg ladda-button" data-size="l" data-style="zoom-out"><span class="ladda-label">Login</span></a>
+		  <a id="nameBtn" type="button" class="btn btn-primary btn-lg ladda-button" data-size="l" data-style="zoom-out"><span class="ladda-label">Aceptar</span></a>
 		</div>
               </div>
             </div>
