--- a/app/public/index.html
+++ b/app/public/index.html
@@ -29,7 +29,7 @@
 			    <% } %>
 			    ">
 		  <label> INICIAR CHAT </label>
-		  <input type="text" class="form-control" id="nameText" placeholder="ESCRIBA EL NOMBRE DE NICK">
+		  <input type="text" class="form-control" id="nameText" placeholder="ESCRIBA SU NOMBRE DE NICK">
 
 		  <label class="control-label"> <%= error %> </label>
 
@@ -46,7 +46,7 @@
     <div class="row">
       <div class="col-md-10">
 	<div class="panel panel-default">
-	  <div class="panel-heading"> Lobby </div>
+	  <div class="panel-heading"> CHAT ISC-9B-JJL </div>
 	  <div class="panel-body">
 	    <div class="nano">
 	      <div class="content">
@@ -63,7 +63,7 @@
       <div class="col-md-2">
 	<div class="panel panel-default">
 	  <div class="panel-heading">
-	    <h3 class="panel-title">Online Users <span class="badge pull-right" id="userCount"></span></h3>
+	    <h3 class="panel-title">USUARIOS CONECTADOS <span class="badge pull-right" id="userCount"></span></h3>
 	  </div>
 	  <div class="panel-body">
 	    <div class="nano">
