--- a/app/public/index.html
+++ b/app/public/index.html
@@ -63,7 +63,7 @@
       <div class="col-md-2">
 	<div class="panel panel-default">
 	  <div class="panel-heading">
-	    <h3 class="panel-title">USUARIOS CONECTADOS <span class="badge pull-right" id="userCount"></span></h3>
+	    <h3 class="panel-title">USUARIOS <span class="badge pull-right" id="userCount"></span></h3>
 	  </div>
 	  <div class="panel-body">
 	    <div class="nano">
